--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <title>FirtTest</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsHYVhSwymoUrnRfg-tnJu6xgau3IQNMY&libraries=places" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANlO-3RjJpj_rrgz_MQIuy_1kOcOFjsHE" async defer></script>
   </head>
   <body>
     <app-favorite></app-favorite>
