--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,32 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <style>
+      #splash-screen {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(140deg, #fff, var(--bluelight1), var(--bluelight2));
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+      }
+    
+      .loader {
+        width: 50px;
+        height: 50px;
+        border: 5px solid #ccc;
+        border-top-color: #007bff;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+    
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+    </style>
     <meta charset="utf-8">
     <title>FirtTest</title>
     <base href="/">
@@ -9,6 +35,9 @@
   </head>
   <body>
     <app-favorite></app-favorite>
+    <div id="splash-screen">
+      <div class="loader"></div>
+    </div>
     <app-root></app-root>
   </body>
 </html>
